# Chess-Game

./: .gitignore  AIEngine.cpp  AIEngine.h  ARCHITECTURE.md  Application.cpp  Application.h  Button.h  CMakeLists.txt  Card.cpp  Card.h  ChessBoard.cpp  ChessBoard.h  ChessMasterUIT.cpp  ChessMasterUIT.manifest  ChessMasterUIT.slnx  ChessMasterUIT.vcxproj  ChessMasterUIT.vcxproj.filters  ChessPiece.cpp  ConfirmationScreen.cpp  ConfirmationScreen.h  CreateAccountScreen.cpp  EmailPasswordScreen.cpp  Evaluator.cpp  FontManager.cpp  FontManager.h  ForgotPasswordScreen.cpp  ForgotPasswordScreen.h  GIT_SETUP_GUIDE.md  GameBoardScreen.cpp  GameBoardScreen.h  GameController.cpp  GameController.h  GameEndEvaluator.cpp  GetStartedScreen.cpp  HomeScreen.cpp  HomeScreen.h  InputField.h  LICENSE  Logger.cpp  Logger.h  (+31 more)
include/Entities/: ChessBoard.h  ChessPiece.h  Color.h  GameBoardScreen.h  Move.h
include/GUI/: BoardTheme.h  Checkbox.h  CreateAccountScreen.h  EmailPasswordScreen.h  GetStartedScreen.h  MainMenuScreen.h  PieceAssetManager.h  PieceView.h  PromotionDialog.h  StatisticsScreen.h  UserData.h
include/Services/: AppState.h  ChessClock.h  Evaluator.h  GameController.h  GameEndEvaluator.h  GameState.h  SQLiteManager.h  ScoreSystem.h  SoundManager.h
src/Application/GUI/: Application.cpp  BoardThemeManager.cpp  Button.cpp  Checkbox.cpp  ConfirmationScreen.cpp  CreateAccountScreen.cpp  EmailPasswordScreen.cpp  ForgotPasswordScreen.cpp  GetStartedScreen.cpp  HomeScreen.cpp  InputField.cpp  LoginScreen.cpp  MainMenuScreen.cpp  PieceAssetManager.cpp  PieceView.cpp  PromotionDialog.cpp  TitleScreen.cpp  UsernameScreen.cpp
src/Domain/Entities/: ChessBoard.cpp  ChessPiece.cpp  GameBoardScreen.cpp
src/Domain/Services/: AIEngine.cpp  ChessClock.cpp  Evaluator.cpp  FontManager.cpp  GameController.cpp  GameEndEvaluator.cpp  MoveGenerator.cpp  MoveValidator.cpp  SQLiteManager.cpp  ScoreSystem.cpp  ScreenManager.cpp  SoundManager.cpp  TextureManager.cpp
src/Infrastructure/Persistence/: SaveLoadManager.cpp  StatisticsScreen.cpp
src/Infrastructure/System/: Logger.cpp
